# Vision_Arena_2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml
doc/: launchsetting.md  objectmsg.md  objectpublic.md
install/: local_setup.sh  setup.sh
install/camera/share/ament_index/resource_index/package_run_dependencies/: camera
install/camera/share/camera/: local_setup.sh  package.dsv  package.ps1  package.sh
install/camera_sim_pkg/share/camera_sim_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_sim_pkg/share/camera_sim_pkg/launch/: camera.launch.py
install/camera_sim_pkg/share/camera_sim_pkg/urdf/: camera_robot.urdf.xacro
install/camera_sim_pkg/share/camera_sim_pkg/worlds/: arena.world
install/player_pkg/lib/player_pkg/: TestNode
install/player_pkg/share/ament_index/resource_index/package_run_dependencies/: player_pkg
install/player_pkg/share/player_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pose_msg/include/pose_msg/pose_msg/msg/: model_pose.h  model_pose.hpp  model_pose_array.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/pose_msg/share/ament_index/resource_index/rosidl_interfaces/: pose_msg
install/pose_msg/share/pose_msg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pose_msg/share/pose_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  export_pose_msg__rosidl_generator_cExport.cmake  export_pose_msg__rosidl_generator_cppExport.cmake  export_pose_msg__rosidl_typesupport_fastrtps_cExport.cmake  pose_msgConfig.cmake  pose_msg__rosidl_typesupport_cExport-noconfig.cmake  pose_msg__rosidl_typesupport_cppExport-noconfig.cmake  pose_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  pose_msg__rosidl_typesupport_introspection_cppExport.cmake
install/pose_msg/share/pose_msg/msg/: ModelPoseArray.idl
install/referee_pkg/include/referee_pkg/msg/: rosidl_generator_cpp__visibility_control.hpp  target.hpp
install/referee_pkg/include/referee_pkg/msg/detail/: multi_object__builder.hpp  multi_object__struct.hpp  multi_object__traits.hpp  multi_object__type_support.hpp  race_stage__type_support.hpp
install/referee_pkg/include/referee_pkg/referee_pkg/msg/: multi_object.h  object.hpp  race_stage.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/referee_pkg/include/referee_pkg/referee_pkg/srv/: hit_armor.h  hit_arror.h
install/referee_pkg/include/referee_pkg/srv/: hit_arror.hpp
install/referee_pkg/include/referee_pkg/srv/detail/: hit_armor__traits.hpp  hit_armor__type_support.hpp  (+1 more)
install/referee_pkg/share/referee_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/referee_pkg/share/referee_pkg/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_referee_pkg__rosidl_generator_cExport-noconfig.cmake  export_referee_pkg__rosidl_typesupport_fastrtps_cppExport.cmake  referee_pkg__rosidl_typesupport_cExport.cmake  referee_pkg__rosidl_typesupport_cppExport-noconfig.cmake  referee_pkg__rosidl_typesupport_introspection_cExport-noconfig.cmake  referee_pkg__rosidl_typesupport_introspection_cExport.cmake  referee_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  referee_pkg__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/referee_pkg/share/referee_pkg/launch/: referee_pkg_launch.xml
install/referee_pkg/share/referee_pkg/msg/: MultiObject.idl  RaceStage.idl
install/referee_pkg/share/referee_pkg/srv/: HitArmor.idl  HitArmor.srv  HitArmor_Request.msg  HitArmor_Response.msg  HitArror.idl  HitArror.srv  HitArror_Request.msg
install/target_model_pkg/share/target_model_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/target_model_pkg/share/target_model_pkg/urdf/armor/: armor_1.config  armor_1.sdf  armor_2.sdf  armor_3.sdf  armor_4.config  armor_4.sdf
install/target_model_pkg/share/target_model_pkg/urdf/armor/textures/: small_num5.material
install/target_model_pkg/share/target_model_pkg/urdf/rectangle/: rectangle.config
install/target_model_pkg/share/target_model_pkg/urdf/sphere/: sphere.config  sphere.sdf
log/: latest_build
results/: TEAMENAME_results.json  TEAMENAME_results.json.sha256  TeamA_results.json  TeamA_results.json.sha256
ros_gazebo_plugin/msg/pose_msg/: CMakeLists.txt  package.xml
ros_gazebo_plugin/msg/pose_msg/msg/: ModelPoseArray.msg
ros_gazebo_plugin/node/src/camera/: CMakeLists.txt
ros_gazebo_plugin/node/src/camera/include/camera/: new_camera.hpp
ros_gazebo_plugin/node/src/camera/src/: new_camera.cpp
ros_gazebo_plugin/node/src/pose_pub/src/: pose_pub.cpp
src/: compile_commands.json
src/camera_sim_pkg/: CMakeLists.txt
src/player_pkg/: CMakeLists.txt
src/player_pkg/src/: test.cpp
src/referee_pkg/: CMakeLists.txt
src/referee_pkg/include/referee_pkg/: referee_pkg.hpp  utils.hpp
src/referee_pkg/msg/: Object.msg  RaceStage.msg
src/referee_pkg/src/: referee.cpp  utils.cpp
src/target_model_pkg/: CMakeLists.txt  README.md
src/target_model_pkg/include/target_model_pkg/: target_action.hpp
src/target_model_pkg/launch/: target_action.launch.py
src/target_model_pkg/src/: target_action.cpp
src/target_model_pkg/urdf/armor/: armor_2.config  armor_3.config  armor_5.config  armor_5.sdf
src/target_model_pkg/urdf/armor/textures/: small_num2.material  small_num3.material  small_num4.material
src/target_model_pkg/urdf/arrow/: arrow.config  arrow.sdf
src/target_model_pkg/urdf/arrow/meshes/: arrow.dae
src/target_model_pkg/urdf/circle/: circle.config  circle.sdf
src/target_model_pkg/urdf/circle/meshes/: circle.dae
src/target_model_pkg/urdf/rectangle/: rectangle.sdf
src/target_model_pkg/urdf/robot/: robot.config  robot.sdf
src/target_model_pkg/urdf/robot/materials/textures/: small_num1.material
(+62 files in other folders)
